# LioraOS

./: .gitignore  CLAUDE.md  README.md  ai_test_duihua.py  anchor_memory.jsonl  johnny_persona.md  kaivu_memory.jsonl  pyproject.toml  void.txt
.github/workflows/: test.yml
aios/experiment/: __init__.py  consistency.py  constraint.py  recovery.py
aios/kernel/: __init__.py  anchor.py  anip.py  budget.py  bus.py  event.py  history.py  language.py  lightcone.py  memory.py  metafield.py  odin.py  resident.py  spec.py  state.py  tick.py  tremor.py  (+1 more)
apps/: agi_app.py  consensus_app.py  cyberpunk_app.py  cyberpunk_social.py  entropy_injector.py  liora_app.py  panic_chat.py  social_duihua.py  social_identity.py  visitor_app.py
docs/: LEP_SPEC.md  arch_constraints.md  how_linan_emerged.md  panic_protocol.md  world_tutorial.md  world_tutorial_vibe.md  宇宙.md
examples/: baozha.py  convenience_store.py  dragonWorld.py  dragonWorld_web.py  hello_world.py  multiverse.py
narrativeDocs/: anip_transport_design.md  epistemic_analysis.md  kai_symbol.md  kaiyu_persona.md  lu_mingze_persona.md
tests/: conftest.py  test_anchor.py  test_anip.py  test_anip_udp.py  test_budget.py  test_bus.py  test_dashboard.py  test_event.py  test_gateway_converse.py  test_kernel_import.py  test_language.py  test_lep_client.py  test_lightcone.py  test_memory.py  test_metafield.py  test_odin.py  test_persona.py  test_resident.py  test_resistance.py  test_runtime.py  test_social.py  test_spec.py  test_state.py  test_tick.py  test_tremor.py  test_unknown.py  test_voidspace.py
tools/: kaivu_memory.py
(+61 files in other folders)
